changed blog/project posts' links to green

--- a/projects/templates/projects/project_post.html
+++ b/projects/templates/projects/project_post.html
@@ -7,6 +7,10 @@
 .main{
     min-height: 90vh;
 }
+
+a {
+    color:#47754d;
+}
 </style>
 
 <head>
@@ -30,7 +34,7 @@
 
             <br>
             {% if project.code_link %}
-                <a href="{{project.code_link}}" target="_blank" style="color:#47754d;"><p><i class="icon-code"></i> See the code here</p></a>
+                <a href="{{project.code_link}}" target="_blank"><p><i class="icon-code"></i> See the code here</p></a>
             {% endif %}
 
 
