--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -18,7 +18,7 @@
         <div class="col">
         </div>
 
-        <div class="col-sm-8 p-3 mb-2 bg-dark text-light main" style="margin-top:60px; border-radius:10px;">
+        <div class="col-lg-8 p-3 mb-2 bg-dark text-light main" style="margin-top:60px; border-radius:10px;">
             <br >
             <h2>Projects</h2>
             {% for post in projects %}
