--- a/projects/templates/projects/project_post.html
+++ b/projects/templates/projects/project_post.html
@@ -25,7 +25,7 @@ a {
         <div class="col">
         </div>
 
-        <div class="col-sm-8 p-3 mb-2 bg-dark text-light main" style="margin-top:60px; border-radius:10px;">
+        <div class="col-lg-8 p-3 mb-2 bg-dark text-light main" style="margin-top:60px; border-radius:10px;">
 
 
             <br>
