--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -20,7 +20,7 @@
         <div class="col">
         </div>
 
-        <div class="col-sm-8 p-3 mb-2 bg-dark text-light p-3 main" style="margin-top:60px; border-radius:10px;">
+        <div class="col-md-8 p-3 mb-2 bg-dark text-light p-3 main" style="margin-top:60px; border-radius:10px;">
             <br >
             <h2>Blog Posts</h2>
             {% for post in posts %}
