--- a/blog/templates/blog/blog_post.html
+++ b/blog/templates/blog/blog_post.html
@@ -24,7 +24,7 @@ a {
         <div class="col">
         </div>
 
-        <div class="col-sm-8 p-3 mb-2 bg-dark text-light main" style="margin-top:60px; border-radius:10px;">
+        <div class="col-md-8 p-3 mb-2 bg-dark text-light main" style="margin-top:60px; border-radius:10px;">
             <br >
             <h2 style="color:white;"> {{text.title|safe}} </h2>
             <small>{{text.date_posted}} MST</small>
