added photography section

--- a/portfolio/templates/portfolio/portfolio.html
+++ b/portfolio/templates/portfolio/portfolio.html
@@ -35,10 +35,10 @@
 
 					<span>
 						<!-- Link github-->
-						<a href="https://www.github.com/scott-w-maxwell" target = '_blank'><i class="icon-github icon-2x" style="margin-right: 10px; color:#38362e;" ></i></a>
+						<a href="https://github.com/{{ about_me.github_handle }}" target = '_blank'><i class="icon-github icon-2x" style="margin-right: 10px; color:#38362e;" ></i></a>
 
 						<!-- Link to Linkedin -->
-						<a href="https://www.linkedin.com/in/scott-w-maxwell/" target = '_blank'><i class="icon-linkedin icon-2x" style="margin-right: 10px; color:#38362e;"></i></a>
+						<a href="{{ about_me.linkedin_url }}" target = '_blank'><i class="icon-linkedin icon-2x" style="margin-right: 10px; color:#38362e;"></i></a>
 						
 						<!-- Link to StackOverflow -->
 <!-- 						<a href="https://stackoverflow.com/users/9561154/smaxwell" target = '_blank'><i class="icon-stackexchange icon-2x" style="margin-right: 10px; color:#38362e;"></i></a> -->
