--- a/portfolio/templates/portfolio/navbar.html
+++ b/portfolio/templates/portfolio/navbar.html
@@ -27,6 +27,10 @@
           <a class="nav-link text-white" href="{% url 'projects' %}">Projects</a>
         </li>
 
+        <li class="nav-item">
+          <a class="nav-link text-white" href="{% url 'photography' %}">Photography</a>
+        </li>
+
       </ul>
     </div>
   </div>
