Added title to photography pages

--- a/photography/templates/photography/photos.html
+++ b/photography/templates/photography/photos.html
@@ -1,6 +1,10 @@
 {% extends 'portfolio/base.html' %}
 
 {% block content %}
+<head>
+    {% load static %}
+    <title>Scott Maxwell - Photography</title>
+</head>
 
 <style>
     .main{
