--- a/photography/templates/photography/photo_post.html
+++ b/photography/templates/photography/photo_post.html
@@ -1,6 +1,11 @@
 {% extends 'portfolio/base.html' %}
 
 {% block content %}
+<head>
+    {% load static %}
+    <title>Scott Maxwell - Photography</title>
+</head>
+
 
 <style>
     .main{
