Added github contribution chart

--- a/portfolio/templates/portfolio/portfolio.html
+++ b/portfolio/templates/portfolio/portfolio.html
@@ -130,6 +130,11 @@
 				<small style="color:#A7A3A3;"><a href="{% url 'blog' %}" style="color:#A7A3A3;" target = '_blank'>View more posts here</a></small>
 			</div>
 
+			<!-- Github Calendar -->
+			<div class="p-3 mb-2 bg-dark text-light text-dak" style="border-radius:10px; overflow:hidden;">
+				<h2>My Github Contributions</h2>
+				<img src="http://ghchart.rshah.org/2a4933/scott-w-maxwell" alt="scott-w-maxwell's Github chart" />				
+			</div>
 		</div>
 
 
