Removed MST from dates

--- a/blog/templates/blog/blog_post.html
+++ b/blog/templates/blog/blog_post.html
@@ -27,7 +27,7 @@ a {
         <div class="col-md-8 p-3 mb-2 bg-dark text-light main" style="margin-top:60px; border-radius:10px;">
             <br >
             <h2 style="color:white;"> {{text.title|safe}} </h2>
-            <small>{{text.date_posted|date:'m/d/Y'}} MST</small>
+            <small>{{text.date_posted|date:'m/d/Y'}}</small>
             <p> {{text.content|safe}}  </p>
 
             <br>
