--- a/projects/templates/projects/project_post.html
+++ b/projects/templates/projects/project_post.html
@@ -38,7 +38,7 @@ a {
             {% endif %}
 
 
-            <small>{{ project.date_posted|date:'m/d/Y' }} MST</small>
+            <small>{{ project.date_posted|date:'m/d/Y' }}</small>
 
 
             <p> {{project.content|safe}}  </p>
