Removed Hour:Minute from date in projects without link

--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -32,7 +32,7 @@
 
 			{% else %}
                 		<h5> <a href="{{ request.path }}projectpost/{{ post.id }}" style="color:white;">{{post.title|safe}}</a></h5>
-                		<small>{{post.date_posted}}</small>
+                		<small>{{post.date_posted|date:'m/d/Y'}}</small>
 			{% endif %}
 		{% endif %}
 	    {% endfor %}
