--- a/portfolio/templates/portfolio/portfolio.html
+++ b/portfolio/templates/portfolio/portfolio.html
@@ -11,6 +11,10 @@
   margin-left:0px;
   margin-right:0px;
 }
+
+.github-calendar{
+	max-width:85vw;
+}
 </style>
 
 <head>
@@ -133,7 +137,7 @@
 			<!-- Github Calendar -->
 			<div class="p-3 mb-2 bg-dark text-light text-dak" style="border-radius:10px; overflow:hidden;">
 				<h2>My Github Contributions</h2>
-				<img src="http://ghchart.rshah.org/2a4933/scott-w-maxwell" alt="scott-w-maxwell's Github chart" />				
+				<img class="github-calendar" src="http://ghchart.rshah.org/2a4933/scott-w-maxwell" alt="scott-w-maxwell's Github chart" />				
 			</div>
 		</div>
 
