--- a/projects/templates/projects/project_post.html
+++ b/projects/templates/projects/project_post.html
@@ -46,7 +46,7 @@ img{
             {% endif %}
 
 
-            <small>{{ project.date_posted|date:'m/d/Y' }}</small>
+            <small>{{ project.date_posted|date:'M d, Y' }}</small>
 
 
             <p> {{project.content|safe}}  </p>
