--- a/blog/templates/blog/blog_post.html
+++ b/blog/templates/blog/blog_post.html
@@ -15,6 +15,7 @@ iframe{
 img{
     max-width:90vw;
 }
+
 </style>
 
 
@@ -33,7 +34,7 @@ img{
         <div class="col-md-8 p-3 mb-2 bg-dark text-light main" style="margin-top:60px; border-radius:10px;">
             <br >
             <h2 style="color:white;"> {{text.title|safe}} </h2>
-            <small>{{text.date_posted|date:'m/d/Y'}}</small>
+            <small>{{text.date_posted|date:'M d, Y'}}</small>
             <p> {{text.content|safe}}  </p>
 
             <br>
