--- a/portfolio/templates/portfolio/portfolio.html
+++ b/portfolio/templates/portfolio/portfolio.html
@@ -125,9 +125,9 @@
 				{% for blog in blogposts %}
 					<hr >
 					{% if blog.link %}
-					<p><a href="{{ blog.link }}" target = '_blank' style="color:white;">{{ blog.title }}</a><small style="color:#838080;"> - {{ blog.date_posted|date:'m/d/Y' }}</small></p>
+					<p><a href="{{ blog.link }}" target = '_blank' style="color:white;">{{ blog.title }}</a><small style="color:#838080;"> - {{ blog.date_posted|date:'M d, Y' }}</small></p>
 					{% else %}
-					<p><a href="{{ request.path }}blog/blogpost/{{ blog.id }}" target = '_blank' style="color:white;">{{ blog.title }}</a><small style="color:#838080;"> - {{blog.date_posted}}</small></p>
+					<p><a href="{{ request.path }}blog/blogpost/{{ blog.id }}" target = '_blank' style="color:white;">{{ blog.title }}</a><small style="color:#838080;"> - {{blog.date_posted|date:'M d, Y'}}</small></p>
 					{% endif %}
 				{% endfor %}
 				<hr >
