Changed 'Contributions' to 'Activity'

--- a/portfolio/templates/portfolio/portfolio.html
+++ b/portfolio/templates/portfolio/portfolio.html
@@ -136,7 +136,7 @@
 
 			<!-- Github Calendar -->
 			<div class="p-3 mb-2 bg-dark text-light text-dak" style="border-radius:10px; overflow:hidden;">
-				<h2>My Github Contributions</h2>
+				<h2>My Github Activity</h2>
 				<center>
 					<img class="github-calendar" src="http://ghchart.rshah.org/2a4933/scott-w-maxwell" alt="scott-w-maxwell's Github chart" />				
 				</center>
