--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -1,20 +1,39 @@
+{% load static %}
+
 <!DOCTYPE html>
 
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	
-	<!-- For mobile devices -->
-	<meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=20 user-scalable=no">
-	
-	<!-- Bootstrap -->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Code Project Title</title>
 
-	<!-- For icons -->
-	<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
 
-	<link rel="icon" href="{{ website_icon.image.url }}">
+    <!-- Main stylesheet -->
+    <link rel="stylesheet" href="{% static 'portfolio/css/main.css' %}">
+
+    <!-- Google Font -->
+    <link href='https://fonts.googleapis.com/css?family=Varela Round' rel='stylesheet'>
+
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/b69886d746.js" crossorigin="anonymous"></script>
+
+	<!-- For TinyMCE for AboutMe -->
+	<link href="{% static 'tinymce/css/prism.css' %}" rel="stylesheet">
 
 </head>
 
