--- a/portfolio/templates/portfolio/navbar.html
+++ b/portfolio/templates/portfolio/navbar.html
@@ -1,39 +1,31 @@
-{% load static %}
+<!-- Bootstrap Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark  fixed-top" style="background-color:#1d2436;">
+  <a class="nav-item" style="padding-right:10px;" href="index.html"><i class="fa-solid fa-house"></i></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+    aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="woodworking.html">Woodworking Projects</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="photography.html">Photography</a>
+      </li>
 
-<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-dark" style="opacity:98%; height:">
-  <div class="container-fluid">
+      <li class="nav-item">
+        <a class="nav-link" href="cooking.html">Cooking</a>
+      </li>
 
-    <a class="navbar-brand text-white" href="#top"><i class="icon-home"></i></a>
+      <li class="nav-item">
+        <a class="nav-link" href="blog.html">Blogs</a>
+      </li>
 
-    <button class="navbar-toggler btn-secondary" type="button" style="color:white;" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-     <i class="icon-reorder"></i>
-    </button>
+      <li class="nav-item">
+        <a class="nav-link" href="programming_projects.html">Programming Projects</a>
+      </li>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
-
-        <li class="nav-item text-white">
-          <a class="nav-link text-white" aria-current="page" href="{% url 'portfolio' %}">Portfolio</a>
-        </li>
-
-
-        <li class="nav-item">
-          <a class="nav-link text-white" href="{% url 'blog' %}">Blog</a>
-        </li>
-
-
-        <li class="nav-item">
-          <a class="nav-link text-white" href="{% url 'projects' %}">Projects</a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link text-white" href="{% url 'photography' %}">Photography</a>
-        </li>
-
-      </ul>
-    </div>
+    </ul>
   </div>
 </nav>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
